# flipper-url-shortener

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  lint.yml
app/: alembic.ini  main.py
app/api/: __init__.py  redirect_router.py
app/api/v0/: __init__.py
app/core/: dependencies.py  paginate.py  security.py  settings.py
app/core/cache/: backends.py  decorators.py  key_builders.py
app/core/postgres/: db.py  init_db.py
app/models/: __init__.py  url_models.py  user_models.py
app/schemas/: auth_schemas.py  url_schemas.py
app/services/: auth_services.py
app/tasks/: url_tasks.py
backend/: .env  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  redirect_router.py
backend/app/api/v0/: __init__.py
backend/app/api/v0/routers/: tag_router.py  url_router.py
backend/app/core/: dependencies.py  settings.py
backend/app/core/cache/: backends.py  decorators.py  key_builders.py
backend/app/core/postgres/: db.py
backend/app/core/utils/: enum_utils.py  models_utils.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 12539e0f5f60_auto.py  a49b497248e1_auto.py
backend/app/models/: __init__.py  tag_models.py  url_models.py
backend/app/schemas/: tag_schemas.py  url_schemas.py
backend/app/services/: paginate_services.py
backend/app/static/: __init__.py
backend/app/tasks/: url_tasks.py
frontend/: .env  .env.example  .eslintrc.cjs  .gitignore  index.html  jsconfig.json  package.json  quasar.config.js
(+14 files in other folders)
